# schedule-cli

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
locales/: messages.pot
locales/vi/LC_MESSAGES/: messages.po
modules/: __init__.py  getter.py  models.py
schedule_cli/: logger.py  main.py
schedule_cli/modules/: __init__.py  getter.py  models.py
src/schedule_cli/: cli.py  logger.py
src/schedule_cli/modules/: constants.py  getter.py  getters.py  models.py
typings/: __builtins__.pyi
