[project]
name = "schedule-cli"
version = "0.1.0"
description = "Command-line interface to view and export week schedules."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "keyring>=25.6.0",
    "requests>=2.32.4",
    "rich>=14.1.0"
]

[project.scripts]
schedule-cli = "schedule_cli:cli"
