[tool.poetry]
name = "schedule-cli"
version = "0.1.0"
description = "A command-line interface for TDTU students to view and export schedule"
authors = ["Nguyễn Phúc Toàn <ngphuc_toan@tutanota.com>"]
readme = "README.md"

[tool.poetry.scripts]
schedule-cli = "schedule_cli.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.13.4"
click = "^8.2.1"
keyring = "^25.6.0"
requests = "^2.32.5"
rich = "^14.1.0"
arrow = "^1.3.0"

[tool.poetry.dev-dependencies]
ruff = "^0.12.9"
